manifests/cluster-addons/forgejo/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo
  namespace: forgejo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: forgejo-runner
            app.kubernetes.io/name: runner
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            app.kubernetes.io/name: homelab-copier
      toPorts:
        - ports:
            - port: '2222'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toFQDNs:
        - matchName: 'authentik.bakseter.no'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo
  namespace: homelab-copier
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homelab-copier

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress: []

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: '2222'
              protocol: TCP

    - toFQDNs:
        - matchName: 'github.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
